k8s/platform/components/data-services/ddbb/postgres/pgadmin-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pgadmin-ui-route
  namespace: devops-tools
  labels:
    part-of: microservices-platform
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`pgadmin.desarrollo`)
      kind: Rule
      services:
        - name: pgadmin-pgadmin4
          port: 80
